2000-07-31  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (References): Add URL for invariant division.

2000-07-30  Kevin Ryde  <kevin@swox.se>

	* tune/time.c (speed_cpu_frequency_proc_cpuinfo): Add support for
	alpha linux "cycle frequency".

	* mpn/sparc64/gmp-mparam.h: Re-run tune program for FFT thresholds.

2000-07-29  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (ABI and ISA): Add sparc64-*-linux*.
	* configure.in [sparc64-*-linux*] (gmp_cflags64_gcc): Same flags
	as under solaris.

	* configure.in (--enable-fft): New option, default "no".
	* gmp.texi (Build Options): Describe it.
	* mpn/generic/{mul,mul_n}.c [WANT_FFT]: Use it.
	* tune/tuneup.c [WANT_FFT]: By default don't probe FFTs if not enabled.
	* NEWS: Multiplication optionally using FFT.

	* tune/README: Notes on FFT and GCD thresholds, other minor updates.

	* Makefile.am: Expunge the macos generated files update stuff.

2000-07-28  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/*/gmp-mparam.h: Add some FFT thresholds.

2000-07-28  Kent Boortz  <kent@swox.se>

	* macos/Asm*, macos/CmnObj, macos/Mp*: Delete directories.
	* macos/Makefile: Delete file.
	* macos/Makefile.cw: Delete file.
	* macos/config.h: Delete file.
	* macos/Asm/*.s: Delete files.
	* macos/configure: Create target directories. Don't transform
	'(C)' to '(;)' in a 'dnl' line comment in .asm file.
	* Makefile.am: Delete macos targets.
	* macos/README: Reflect that we reverted back to a build
	process that require ""macos/configure" to run on MacOS.
	This imply that MacPerl is needed for a build in MacOS.

2000-07-27  Kevin Ryde  <kevin@swox.se>

	* mpn/generic/mul_fft.c: New file, by Paul Zimmermann, minor mods
	applied.
	* configure.in (gmp_mpn_functions): Add it.
	* mpn/generic/{mul,mul_n}.c: Use it.
	* doc/multiplication: Describe it (briefly).

	* gmp-impl.h (FFT_MUL_THRESHOLD etc): New thresholds.
	(mpn_fft_best_k, mpn_fft_next_size, mpn_mul_fft, mpn_mul_fft_full):
	New functions.
	(numberof, TMP_ALLOC_TYPE etc, _MP_ALLOCATE_FUNC_TYPE etc,